src/test/deca/syntax/valid/synt/new.deca
class Test {
    int x = 3;
}

{
    Test A = new Test();
}
