src/test/deca/syntax/invalid/synt/initialization.deca
// @expected_output deca:3:12:
{
    int x = class;
}
